--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         BrandName
     </div>
     <ul>
-        <li>Login</li>
-        <li>Signup</li>
+        <li routerLink="login" (click)="handleNav()">Login</li>
+        <li routerLink="signup" (click)="handleNav()">Signup</li>
     </ul>
 </nav>
