--- a/src/app/components/username-password-form/username-password-form.component.html
+++ b/src/app/components/username-password-form/username-password-form.component.html
@@ -2,9 +2,11 @@
     <label>Username</label>
     <input formControlName="username" type="text" />
 </div>
-<app-control-messages controlName="username" ></app-control-messages>
+<app-control-messages controlName="username" [validationMessages]="validators | validationMessageTrnsf : 'username'">
+</app-control-messages>
 <div class="input-group">
     <label>Password</label>
-    <input formControlName="password"  type="password" />
+    <input formControlName="password" type="password" />
 </div>
-<app-control-messages controlName="password" ></app-control-messages>
+<app-control-messages controlName="password" [validationMessages]="validators | validationMessageTrnsf : 'password'">
+</app-control-messages>
