--- a/src/app/pages/login-container/login-container.component.scss
+++ b/src/app/pages/login-container/login-container.component.scss
@@ -1,6 +1,6 @@
 .login-container {
-    display: grid;
-    margin: 1rem;
-    grid-template-columns: 20% 60% 20% ;
-    place-content: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
