--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<section class="footer">
+    Copyright protected.
+    BookBorrowConnect application.Version0.0.1
+</section>
