--- a/src/app/pages/home-container/home-container.component.scss
+++ b/src/app/pages/home-container/home-container.component.scss
@@ -3,9 +3,18 @@
     grid-template-columns:  repeat(5, 1fr);
     .item{
         margin : 0.4rem;
-        .language{
-            color:#575757;
-            font-size: 1rem;
+        .card-content-container{
+            text-align: center;
+            .language{
+                color:#575757;
+                font-size: 0.8rem;
+            }
+            p{
+                margin : 0.6rem;
+            }
+        }
+        .full-width{
+            width: 100%;
         }
     }
 }
