--- a/src/app/components/address-form/address-form.component.html
+++ b/src/app/components/address-form/address-form.component.html
@@ -1,23 +1,42 @@
 <fieldset formGroupName="address">
-    <legend > Address</legend>
-    <div class="input-group">
-      <label>Address line 1</label>
-      <input formControlName="addressLine1" />
-    </div>
-    <div class="input-group">
-      <label>Address Line 2</label>
-      <input formControlName="addressLine2" />
-    </div>
-    <div class="input-group">
-      <label> Pincode</label>
-      <input formControlName="pinCode" />
-    </div>
-    <div class="input-group">
-      <label>City</label>
-      <input formControlName="city" />
-    </div>
-    <div class="input-group">
-      <label>State</label>
-      <input formControlName="state"/>
-    </div>
-  </fieldset>
+  <legend> Address</legend>
+  <div class="input-group">
+    <label>Address line 1</label>
+    <input formControlName="addressLine1" />
+  </div>
+  <div class="input-group">
+    <label>Address Line 2</label>
+    <input formControlName="addressLine2" />
+  </div>
+  <div class="input-group">
+    <label> Pincode</label>
+    <input formControlName="pinCode" />
+  </div>
+  <div class="input-group">
+    <label>City</label>
+    <app-dropdown [settings]="customDropdownSettings" (select)="onSelectOption($event)"
+      [optionsTemplate]="customOptionsTemplate"></app-dropdown>
+  </div>
+  <div class="input-group">
+    <label>State</label>
+    <app-dropdown [settings]="dropDownSettings" (select)="onSelectOption($event)"
+      [optionsTemplate]="customOptionsTemplate"></app-dropdown>
+  </div>
+</fieldset>
+
+<!--Custom options template passed into app-dropdown starts here-->
+<ng-template #customOptionsTemplate let-select="select">
+  <div class="options-panel-container">
+    <ul class="options-panel">
+      @for(item of cities ; track item.id){
+      <li>
+        <div class="item" (click)="select(item)">
+          <h3>{{item.name}}</h3>
+          <p class="code" >{{item.state}}</p>
+        </div>
+      </li> 
+      }
+    </ul>
+    <ng-template>
+
+      <!--Custom options template passed into app-dropdown ends here-->
